[package]
name = "my-trash-bin-240704-exe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-trash-bin-240704-lib = { version = "0.1.0", path = "../lib" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
